--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_performance_web: 0.1.4+2
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.0
+  flutter_spinkit: 5.1.0
   flutterflow_colorpicker: 
     git:
       url: https://github.com/FlutterFlow/flutterflow_colorpicker.git
