--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_performance_web: 0.1.4+2
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.0
+  flutter_native_splash: 2.3.1
   flutter_spinkit: 5.1.0
   flutterflow_colorpicker: 
     git:
@@ -78,10 +79,12 @@ dependencies:
   sqflite: 2.2.6
   stream_transform: 2.1.0
   timeago: 3.2.2
+  universal_io: 2.2.2
   url_launcher: 6.1.10
   url_launcher_android: 6.0.27
   url_launcher_ios: 6.1.4
   url_launcher_platform_interface: 2.1.2
+  xml: 6.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
