--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore_platform_interface: 5.15.0
   cloud_firestore_web: 3.6.0
   easy_debounce: 2.0.1
+  extension_google_sign_in_as_googleapis_auth: ^2.0.11
   firebase_auth: 4.6.2
   firebase_auth_platform_interface: 6.15.2
   firebase_auth_web: 5.5.2
@@ -58,6 +59,8 @@ dependencies:
   google_sign_in_ios: 5.6.1
   google_sign_in_platform_interface: 2.4.0
   google_sign_in_web: 0.11.0+2
+  googleapis: ^11.4.0
+  googleapis_auth: ^1.4.1
   intl: 0.18.0
   json_path: 0.6.2
   page_transition: 2.0.4
@@ -78,6 +81,7 @@ dependencies:
   sign_in_with_apple_web: 1.0.1
   sqflite: 2.2.6
   stream_transform: 2.1.0
+  table_calendar: 3.0.9
   timeago: 3.2.2
   universal_io: 2.2.2
   url_launcher: 6.1.10
