--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore: 4.8.0
   cloud_firestore_platform_interface: 5.15.0
   cloud_firestore_web: 3.6.0
+  dropdown_button2: 2.0.0
   easy_debounce: 2.0.1
   extension_google_sign_in_as_googleapis_auth: ^2.0.11
   firebase_auth: 4.6.2
