--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -63,6 +63,11 @@
     <string>Please Allow</string>
 	<key>NSPhotoLibraryUsageDescription</key>
     <string>Please Allow</string>
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>fetch</string>
+        <string>remote-notification</string>
+    </array>
 
 
 	<key>UILaunchStoryboardName</key>
