--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,12 @@ dependencies:
   cloud_firestore: 4.8.0
   cloud_firestore_platform_interface: 5.15.0
   cloud_firestore_web: 3.6.0
+  cloud_functions: 4.3.2
+  cloud_functions_platform_interface: 5.4.2
+  cloud_functions_web: 4.5.2
   dropdown_button2: 2.0.0
   easy_debounce: 2.0.1
+  emoji_flag_converter: 1.1.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.11
   firebase_auth: 4.6.2
   firebase_auth_platform_interface: 6.15.2
@@ -40,6 +44,9 @@ dependencies:
   firebase_core: 2.13.1
   firebase_core_platform_interface: 4.8.0
   firebase_core_web: 2.5.0
+  firebase_messaging: 14.6.2
+  firebase_messaging_platform_interface: 4.5.2
+  firebase_messaging_web: 3.5.2
   firebase_performance: 0.9.2+2
   firebase_performance_platform_interface: 0.1.4+2
   firebase_performance_web: 0.1.4+2
@@ -97,17 +104,19 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
-  flutter_launcher_icons: 0.12.0
+  flutter_launcher_icons: 0.13.1
   image: 4.0.17
 
   flutter_test:
     sdk: flutter
 
 
-flutter_icons:
+flutter_launcher_icons:
   android: true
   ios: true
   remove_alpha_ios: true
+  web:
+    generate: true
   image_path: 'assets/images/app_launcher_icon.png'
 
 
