--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   google_sign_in_web: 0.11.0+2
   googleapis: ^11.4.0
   googleapis_auth: ^1.4.1
+  http: ^1.1.0
   intl: 0.18.0
   json_path: 0.6.2
   page_transition: 2.0.4
