--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   dropdown_button2: 2.0.0
   easy_debounce: 2.0.1
   emoji_flag_converter: 1.1.0
+  equatable: 2.0.5
   extension_google_sign_in_as_googleapis_auth: ^2.0.11
   firebase_auth: 4.6.2
   firebase_auth_platform_interface: 6.15.2
@@ -65,6 +66,7 @@ dependencies:
   googleapis_auth: ^1.4.1
   intl: 0.18.0
   json_path: 0.6.2
+  mime_type: 1.0.0
   page_transition: 2.0.4
   path_provider: 2.0.14
   path_provider_android: 2.0.25
@@ -73,7 +75,6 @@ dependencies:
   plugin_platform_interface: 2.1.3
   provider: 6.0.4
   rxdart: 0.27.7
-  share_plus: 6.3.1
   shared_preferences: 2.0.15
   shared_preferences_android: 2.1.0
   shared_preferences_ios: 2.1.1
