--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -58,10 +58,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 
-
-	<key>PermissionGroupNotification</key>
-    <string>Please Allow</string>
+	<key>NSCameraUsageDescription</key>
+    <string>In order to take a picture or video, this app requires permission to access the camera.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
+    <string>In order to upload data, this app requires permission to access the photo library.</string>
+	<key>PermissionGroupNotification</key>
     <string>Please Allow</string>
 
 
