--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   emoji_flag_converter: 1.1.0
   equatable: 2.0.5
   extension_google_sign_in_as_googleapis_auth: ^2.0.11
+  file_picker: 5.2.6
   firebase_auth: 4.6.2
   firebase_auth_platform_interface: 6.15.2
   firebase_auth_web: 5.5.2
@@ -45,9 +46,13 @@ dependencies:
   firebase_performance: 0.9.2+2
   firebase_performance_platform_interface: 0.1.4+2
   firebase_performance_web: 0.1.4+2
+  firebase_storage: 11.2.2
+  firebase_storage_platform_interface: 4.4.2
+  firebase_storage_web: 3.6.2
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.0
   flutter_native_splash: 2.3.1
+  flutter_plugin_android_lifecycle: 2.0.9
   flutter_spinkit: 5.1.0
   flutterflow_colorpicker: 
     git:
@@ -64,6 +69,11 @@ dependencies:
   google_sign_in_web: 0.11.0+2
   googleapis: ^11.4.0
   googleapis_auth: ^1.4.1
+  image_picker: 1.0.4
+  image_picker_android: 0.8.8
+  image_picker_for_web: 3.0.1
+  image_picker_ios: 0.8.8+2
+  image_picker_platform_interface: 2.9.1
   intl: 0.18.1
   json_path: 0.6.2
   mime_type: 1.0.0
@@ -91,6 +101,11 @@ dependencies:
   url_launcher_android: 6.0.27
   url_launcher_ios: 6.1.4
   url_launcher_platform_interface: 2.1.2
+  video_player: 2.6.0
+  video_player_android: 2.4.3
+  video_player_avfoundation: 2.4.2
+  video_player_platform_interface: 6.1.0
+  video_player_web: 2.0.15
   xml: 6.3.0
 
 
