--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,29 +26,29 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   auto_size_text: 3.0.0
-  cached_network_image: 3.2.1
-  cloud_firestore: 4.13.1
-  cloud_firestore_platform_interface: 6.0.5
-  cloud_firestore_web: 3.8.5
-  collection: 1.17.2
+  cached_network_image: 3.3.1
+  cloud_firestore: 4.15.7
+  cloud_firestore_platform_interface: 6.1.8
+  cloud_firestore_web: 3.10.7
+  collection: 1.18.0
   dropdown_button2: 2.3.9
   easy_debounce: 2.0.1
   emoji_flag_converter: 1.1.0
   equatable: 2.0.5
   extension_google_sign_in_as_googleapis_auth: ^2.0.11
   file_picker: 6.1.1
-  firebase_auth: 4.15.2
-  firebase_auth_platform_interface: 7.0.8
-  firebase_auth_web: 5.8.11
-  firebase_core: 2.24.2
+  firebase_auth: 4.17.7
+  firebase_auth_platform_interface: 7.1.7
+  firebase_auth_web: 5.9.7
+  firebase_core: 2.26.0
   firebase_core_platform_interface: 5.0.0
-  firebase_core_web: 2.10.0
-  firebase_performance: 0.9.3+8
-  firebase_performance_platform_interface: 0.1.4+16
-  firebase_performance_web: 0.1.4+16
-  firebase_storage: 11.5.5
-  firebase_storage_platform_interface: 5.1.3
-  firebase_storage_web: 3.6.17
+  firebase_core_web: 2.11.5
+  firebase_performance: 0.9.3+16
+  firebase_performance_platform_interface: 0.1.4+24
+  firebase_performance_web: 0.1.4+24
+  firebase_storage: 11.6.8
+  firebase_storage_platform_interface: 5.1.11
+  firebase_storage_web: 3.7.2
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.1
   flutter_native_splash: 2.3.1
@@ -57,10 +57,11 @@ dependencies:
   flutterflow_colorpicker: 
     git:
       url: https://github.com/FlutterFlow/flutterflow_colorpicker.git
+      ref: v0.0.1
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 7.1.1
-  google_fonts: 4.0.3
+  google_fonts: 6.1.0
   google_sign_in: 6.1.5
   google_sign_in_android: 6.1.20
   google_sign_in_ios: 5.6.4
@@ -68,6 +69,7 @@ dependencies:
   google_sign_in_web: 0.12.1
   googleapis: ^11.4.0
   googleapis_auth: ^1.4.1
+  http: 1.2.0
   image_picker: 1.0.4
   image_picker_android: 0.8.8
   image_picker_for_web: 3.0.1
@@ -82,7 +84,7 @@ dependencies:
   path_provider_foundation: 2.2.2
   path_provider_platform_interface: 2.0.6
   photo_view: 0.14.0
-  plugin_platform_interface: 2.1.6
+  plugin_platform_interface: 2.1.8
   provider: 6.0.5
   rxdart: 0.27.7
   shared_preferences: 2.2.2
@@ -112,6 +114,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+dependency_overrides:
+  http: 1.2.0
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_launcher_icons: 0.13.1
